--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse leftMenu" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item p-2">
-              <a class="navbar-brand dev" href="./Home.html"><i class="fas fa-home"></i>&nbsp;Home</a>
+              <a class="navbar-brand dev" href="./index.html"><i class="fas fa-home"></i>&nbsp;Home</a>
             </li>
             <li class="nav-item p-2">
               
