--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
             </li>
             <li class="nav-item p-2">
               
-              <a class="navbar-brand dev" href="./aboutus.html"><i class="fas fa-address-card"></i>&nbsp;About Us</a>
+              <a class="navbar-brand dev" href="./About.html"><i class="fas fa-address-card"></i>&nbsp;About Us</a>
             </li>
             <li class="nav-item p-2">
               <a class="navbar-brand dev" href="./Contact.html"><i class="fas fa-id-card-alt"></i>&nbsp;Contact US</a>
